fix: header z-index and preloader shift

--- a/css/calculator/needs.css
+++ b/css/calculator/needs.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
 
-    padding: 15px 15px 15px 45px;
+    padding: 25px 15px 25px 45px;
     width: 40%;
-    max-height: 1000px;
+    max-height: 10000px;
     opacity: 100;
 
     transition: max-height 1s ease-in, opacity 1s ease-in;
