--- a/css/common/header.css
+++ b/css/common/header.css
@@ -15,6 +15,8 @@
 
     will-change: transform;
     transition: transform 400ms linear;
+
+    z-index: 1000;
 }
 
 .header--unpinned {
